--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.21.3",
     "bootstrap": "^5.3.8",
+    "date-fns": "^4.1.0",
     "jquery": "^3.7.1",
-    "react": "^19.2.0",
+    "react": "^19.2.3",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.2.0",
+    "react-dom": "^19.2.3",
     "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
